# kanflow

./: .env.example  .gitignore  ERROR.md  MISSION.md  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  clean_docker.sh
backend/crates/kanflow-server/: Cargo.toml
backend/crates/kanflow-server/src/: app.rs  auth.rs  config.rs  lib.rs  main.rs  mongo_store.rs  state.rs
backend/crates/kanflow-server/src/handlers/: columns.rs  health.rs  mod.rs  projects.rs  tasks.rs  users.rs
backend/crates/kanflow-server/tests/: http_contract.rs
backend/migrations/: 20260427000001_init.sql  20260427000002_comments_time_entries.sql  20260427100001_project_members.sql  20260427120000_seed_demo.sql  20260427135000_seed_demo_backfill.sql
frontend/: .env.example  Dockerfile  README.md  firebase-blueprint.json  firestore.rules  index.html  metadata.json  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  AppContext.test.tsx  AppContext.tsx  constants.ts  index.css  types.ts  vite-env.d.ts
frontend/src/components/: AdminCreateUserModal.tsx  AuthProvider.tsx  Avatar.test.tsx  Avatar.tsx  ChatComponent.tsx  DashboardCustomizer.tsx  DashboardView.tsx  InviteTeamModal.tsx  KanbanView.test.tsx  KanbanView.tsx  Layout.tsx  LayoutSearchResults.tsx  PersonalTodoView.tsx  ProfileDropdown.tsx  ProjectsSidebarBlock.tsx  ReportingView.tsx  TaskModal.tsx  TeamChatDock.tsx  TimeKeepingView.tsx
frontend/src/lib/: ai.ts  api.test.ts  api.ts  keycloak.ts  (+5 more)
keycloak/: bootstrap-master-ssl.sh  kanflow-realm.json
